@@ -107,12 +107,43 @@ function adminPageLoaded(){
     
     hideall();
     
-    //TODO
-    //due to a bug in webkit based browsers, the onfocus event isn't fired
-    //affects Safari and Chrome but not sure what versions
-    /*jQuery.each($('input[type=radio]'), function(){
-        $(this).blur($(this).focus());      
-    });*/
+    $.each(js_vars.default_values_check.textfield, function(){
+    	var key = this.key;
+    	var warning = this.warning;
+        $('#'+this.key).change(function(){
+        	checkDefaultBox(key, 'textfield', '', warning);
+    		});
+    });
+    $.each(js_vars.default_values_check.checkbox, function(){
+    	var key = this.key;
+    	var warning = this.warning;
+        $('#'+this.key).click(function(){
+        	checkDefaultBox(key, 'checkbox', '', warning);
+    		});
+    });
+    $.each(js_vars.default_values_check.radio, function(){
+    	var key = this.key;
+    	var warning = this.warning;
+    	if($.support.cssFloat){
+    		//non IE browsers
+    		$('#'+this.key).change(function(){
+            	checkDefaultBox(key, 'radio', '', warning);
+        		});
+    	}else{
+    		$('#'+this.key).focus(function(){
+            	checkDefaultBox(key, 'radio', '', warning);
+        		});
+    		
+    	}
+    });
+    $.each(js_vars.default_values_check.select, function(){
+    	var key = this.key;
+    	var warning = this.warning;
+    	var count = this.count;
+        $('#'+this.key).change(function(){
+        	checkDefaultBox(key, 'select', '', warning, count);
+    		});
+    });
 }
 
 addonload('adminPageLoaded()');
