@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-06-05 [B] Check for default values in admin section not working correctly {SaWey}
 2009-06-04 [C] Added nicer debug_output {GauGau}
 2009-06-04 [O] Use username from users table now, dropping owner_name field in pictures table {Nibbler}
 2009-06-04 [M] Added missing SVN header information {GauGau}
